--- a/README.Rmd
+++ b/README.Rmd
@@ -25,6 +25,75 @@ output: github_document
 -   Map parent protein name and protein group for each peptide.
 -   Calculate peptide GRAVY scores.
 
+`processPeptides()` accepts each argument either as a file path or as an
+in-memory `data.frame`/`data.table`. When you pass a path, the function reads
+the file with `data.table::fread()`, so tab-, comma-, or semicolon-delimited
+text exports (including the default MaxQuant `.txt` peptide export) can be used
+directly. If your data lives in Excel workbooks, import them first (e.g.
+`openxlsx::read.xlsx()`) and pass the resulting table.
+
+#### Required input files
+
+##### 1. MaxQuant peptide export (`peptides_file`)
+
+-   Must contain the structural columns used to derive cleavage information and
+    peptide identities.
+-   All intensity columns referenced in the metadata file must be present and
+    **numeric** so that replicate means can be computed.
+
+Example:
+
+| Sequence | Leading razor protein | Length | Start position | End position | Amino acid before | First amino acid | Last amino acid | Amino acid after | Intensity Y1G120_1 | Intensity Y1G120_2 | Intensity Y2G120_1 |
+| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
+| AAGGPGAPADPGRPT | P81265 | 15 | 609 | 623 | D | A | T | G | 40332000 | 51443000 | 39094000 |
+| AAIDEASKKLNAQ | P15497 | 13 | 253 | 265 | L | A | Q | – | 18167000 | 26893000 | 17524000 |
+
+##### 2. Intensity-column metadata (`intensity_columns_file`)
+
+-   Each row maps a single intensity column to the replicate and all associated
+    grouping variables (e.g. digest stage, treatment).
+-   The non-`Intensity.column` fields must **uniquely identify** the row; they
+    define the nested grouping structure used to calculate replicate and group
+    summaries.
+-   It is recommended to use dots (`.`) instead of spaces in column names for
+    easier programming.
+
+Example:
+
+| Intensity.column | Digest.stage | Yogurt | Replicate |
+| --- | --- | --- | --- |
+| Intensity Y1G120_1 | G120 | Y1 | 1 |
+| Intensity Y1G120_2 | G120 | Y1 | 2 |
+| Intensity Y2G120_1 | G120 | Y2 | 1 |
+
+##### 3. Protein mapping (`protein_mapping_file`)
+
+-   Provides human-readable protein names and groups for each
+    `Leading.razor.protein` identifier.
+-   Missing matches are filled with the fallback levels “Others” and “Whey”.
+-   A curated default mapping ships with the package as an in-memory dataset you can load
+    via `data("peptidomics_protein_mapping_example")`.
+
+Example:
+
+| Leading.razor.protein | Protein.name | Protein.group |
+| --- | --- | --- |
+| UNIPROT:A0A452FK23_CAPHI | Beta-casein | Casein |
+| UNIPROT:CASB_CAPHI | Beta-casein | Casein |
+| UNIPROT:A0A452G9D9_CAPHI | Kappa-casein | Casein |
+
+To use the in-memory default mapping file, call:
+
+```{r, eval=FALSE}
+data(peptidomics_protein_mapping_example)
+
+processPeptides(
+  peptides_file = "path/to/your/peptides.txt",
+  intensity_columns_file = "path/to/your/Intensity_columns.csv",
+  protein_mapping_file = peptidomics_protein_mapping_example
+)
+```
+
 ### Filtering & statistics
 
 -   **PCA** analysis to pre-check group separation --- `pcaPeptides()`.
@@ -90,7 +159,7 @@ result <- processPeptides(
 
 ### 2) Mean peptide intensities by parent proteins
 
-```{r pressure, echo=FALSE}
+```{r}
 plot_int(
   result,
   x_var         = "Yogurt",
